@@ -11,6 +11,7 @@
 
 #include "tableio/textwriter/I3CSVTable.h"
 #include "tableio/textwriter/I3CSVTableService.h"
+#include "tableio/I3TableRowDescription.h"
 #include <boost/filesystem.hpp>
 
 namespace fs = boost::filesystem;
@@ -23,11 +24,13 @@ I3CSVTableService::I3CSVTableService(const std::string& foldername) : folderName
 
 I3TablePtr I3CSVTableService::CreateTable(const std::string& tableName, 
                                I3TableRowDescriptionConstPtr description) {
-        
+  I3TablePtr index_table;
+  if (description->GetUseIndex()){
         I3TableRowDescriptionConstPtr index_desc = GetIndexDescription();
         std::string indexpath = folderName_ + "/__I3Index__"; 
-        I3TablePtr index_table(new I3CSVTable(*this,tableName,index_desc,indexpath));
-        return I3TablePtr(new I3CSVTable(*this,tableName,description,folderName_,index_table));
+        index_table = I3TablePtr(new I3CSVTable(*this,tableName,index_desc,indexpath));
+  }
+  return I3TablePtr(new I3CSVTable(*this,tableName,description,folderName_,index_table));
 }
 
 void I3CSVTableService::CloseFile() {
